A few fixes for monodoc
* Makefile (net_2_0_SUBDIRS): Add 'docs'.
* docs/Makefile: Build documentation only in the net_2_0 profile.
* build/rules.make (MDOC): Pass a proper MONO_PATH.
* tools/mdoc/Makefile (MCS1): Use 'class/lib/net_1_1', not 'class/lib/1.0'.

svn path=/trunk/mcs/; revision=116292

--- a/mdoc/ChangeLog
+++ b/mdoc/ChangeLog
@@ -1,3 +1,7 @@
+2008-10-18  Raja R Harinath  <harinath@hurrynot.org>
+
+	* Makefile (MCS1): Use 'class/lib/net_1_1', not 'class/lib/1.0'.
+
 2008-10-17  Jonathan Pryor <jpryor@novell.com>
 
 	* Mono.Documentation/monodocer.cs: -overrides & -pretty should default 
