--- a/mdoc/ChangeLog
+++ b/mdoc/ChangeLog
@@ -1,3 +1,8 @@
+2008-10-17  Jonathan Pryor <jpryor@novell.com>
+
+	* Makefile: Fix $(EXTRA_DISTFILES) so that `make distcheck` doesn't
+	  fail on mdoc anymore...
+
 2008-10-18  Raja R Harinath  <harinath@hurrynot.org>
 
 	* Makefile (MCS1): Use 'class/lib/net_1_1', not 'class/lib/1.0'.
