--- a/mdoc/ChangeLog
+++ b/mdoc/ChangeLog
@@ -1,3 +1,9 @@
+2008-11-12  Jonathan Pryor <jpryor@novell.com>
+
+	* Resources/defaulttemplate.xsl: Update /html/head/meta/@content value
+	  so that IE7 properly recognizes the file as UTF-8 encoded.
+	  Fixes #444009.
+
 2008-10-27  Jonathan Pryor <jpryor@novell.com>
 
 	* Makefile: Fix build error caused by filenames containing '`'.
