--- a/mdoc/ChangeLog
+++ b/mdoc/ChangeLog
@@ -1,3 +1,10 @@
+2008-11-19  Jonathan Pryor <jpryor@novell.com>
+
+	* Mono.Documentation/monodocer.cs: Add the assembly's directory to
+	  Cecil's BaseAssemblyResolver search list so that assemblies in the
+	  same directory as the assembly we're processing can be found.
+	  Allows mono-tools/gendarme to be built with a Cecil-using mdoc.
+
 2008-11-15  Jonathan Pryor <jpryor@novell.com>
 
 	* Mono.Documentation/monodocer.cs: Properties on interfaces shouldn't
